baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__array_map_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Array"
Dot "."
Word "map"
Word "with"
Word "throwing"
Word "callback"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Pure"
Word "map"
Word "callback"
Function "function"
Word "test_array_map_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBracket "["
RBracket "]"
LBrace "{"
Let "let"
Word "items"
Colon ":"
Word "int"
LBracket "["
RBracket "]"
Equals "="
LBracket "["
IntegerLiteral "1"
Comma ","
IntegerLiteral "2"
Comma ","
IntegerLiteral "3"
RBracket "]"
Word "items"
Dot "."
Word "map"
LParen "("
LParen "("
Word "x"
RParen ")"
Arrow "->"
LBrace "{"
Word "x"
Star "*"
IntegerLiteral "2"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Throwing"
Word "map"
Word "callback"
Function "function"
Word "test_array_map_throwing"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBracket "["
RBracket "]"
LBrace "{"
Let "let"
Word "items"
Colon ":"
Word "int"
LBracket "["
RBracket "]"
Equals "="
LBracket "["
IntegerLiteral "1"
Comma ","
IntegerLiteral "2"
Comma ","
IntegerLiteral "3"
RBracket "]"
Word "items"
Dot "."
Word "map"
LParen "("
LParen "("
Word "x"
RParen ")"
Arrow "->"
LBrace "{"
If "if"
LParen "("
Word "x"
EqualsEquals "=="
IntegerLiteral "2"
RParen ")"
LBrace "{"
Throw "throw"
Quote "\""
Word "found"
Word "two"
Quote "\""
RBrace "}"
Word "x"
Star "*"
IntegerLiteral "2"
RBrace "}"
RParen ")"
RBrace "}"
