baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__basic.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Test"
Colon ":"
Function "function"
Word "type"
Word "with"
Throws "throws"
Word "clause"
Slash "/"
Slash "/"
Word "This"
Word "verifies"
Word "that"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
Word "parses"
Word "correctly"
Word "type"
Word "ThrowingFn"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
Function "function"
Word "takes_throwing"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
