baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__catch_absorbs_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Catch "catch"
Word "should"
Word "absorb"
Throws "throws"
EqualsEquals "=="
Equals "="
Function "function"
Word "caught_may_fail"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "string"
LBrace "{"
If "if"
LParen "("
Word "x"
EqualsEquals "=="
IntegerLiteral "0"
RParen ")"
LBrace "{"
Throw "throw"
Quote "\""
Word "zero"
Quote "\""
RBrace "}"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
Slash "/"
Slash "/"
Word "Calling"
Word "a"
Word "throwing"
Function "function"
Word "without"
Catch "catch"
Minus "-"
Word "should"
Word "propagate"
Throws "throws"
Function "function"
Word "test_no_catch"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "caught_may_fail"
LParen "("
IntegerLiteral "1"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Catching"
Word "with"
Word "wildcard"
Minus "-"
Word "should"
Word "absorb"
Throws "throws"
Function "function"
Word "test_catch_all"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "caught_may_fail"
LParen "("
IntegerLiteral "1"
RParen ")"
Catch "catch"
LParen "("
Word "e"
RParen ")"
LBrace "{"
Word "_"
FatArrow "=>"
Quote "\""
Word "caught"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Catching"
Word "specific"
Word "type"
Minus "-"
Word "should"
Word "absorb"
Word "that"
Word "type"
Function "function"
Word "test_catch_string"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "caught_may_fail"
LParen "("
IntegerLiteral "1"
RParen ")"
Catch "catch"
LParen "("
Word "e"
RParen ")"
LBrace "{"
Word "_"
Colon ":"
Word "string"
FatArrow "=>"
Quote "\""
Word "caught"
Word "string"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Catch"
Word "then"
Word "re-throw"
Minus "-"
Word "should"
Word "propagate"
Word "the"
Word "re-thrown"
Word "type"
Function "function"
Word "test_catch_rethrow"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "caught_may_fail"
LParen "("
IntegerLiteral "1"
RParen ")"
Catch "catch"
LParen "("
Word "e"
RParen ")"
LBrace "{"
Word "_"
FatArrow "=>"
Throw "throw"
IntegerLiteral "42"
RBrace "}"
RBrace "}"
