baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__chained_hof.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Chained"
Word "HOF"
Colon ":"
Throws "throws"
Word "through"
Word "multiple"
Word "layers"
EqualsEquals "=="
Equals "="
Function "function"
Word "apply_inner"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Word "callback"
Word "parameter"
Error "`"
Word "g"
Error "`"
Word "has"
Word "implicit"
Word "effect"
Word "polymorphism"
Word "but"
Word "is"
Word "not"
Word "directly"
Word "invoked"
Function "function"
Word "apply_outer"
LParen "("
Word "g"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_inner"
LParen "("
Word "g"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Pure"
Word "through"
Word "two"
Word "layers"
Function "function"
Word "test_chained_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_outer"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Throwing"
Word "through"
Word "two"
Word "layers"
Function "function"
Word "test_chained_throwing"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_outer"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "deep"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
