baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__class_field_fn_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Class"
Word "fields"
Word "with"
Function "function"
Word "types"
Word "and"
Throws "throws"
EqualsEquals "=="
Equals "="
Class "class"
Word "PureHandler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
RBrace "}"
Class "class"
Word "ThrowingHandler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
Throws "throws"
Word "string"
RBrace "}"
Class "class"
Word "MixedHandler"
LBrace "{"
Word "safe"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Word "risky"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
RBrace "}"
Slash "/"
Slash "/"
Word "Function"
Word "returning"
Word "a"
Class "class"
Word "with"
Function "function"
Word "fields"
Function "function"
Word "make_pure_handler"
LParen "("
RParen ")"
Arrow "->"
Word "PureHandler"
LBrace "{"
Word "PureHandler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "null"
RBrace "}"
RBrace "}"
RBrace "}"
Function "function"
Word "make_throwing_handler"
LParen "("
RParen ")"
Arrow "->"
Word "ThrowingHandler"
LBrace "{"
Word "ThrowingHandler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Throw "throw"
Quote "\""
Word "error"
Quote "\""
RBrace "}"
RBrace "}"
RBrace "}"
