baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__compose_hof.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Compose"
Word "HOF"
Colon ":"
Word "nested"
Word "higher-order"
Word "functions"
Word "with"
Word "generics"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Compose"
Word "two"
Word "functions"
Comma ","
Word "propagating"
Throws "throws"
Word "from"
Word "both"
Function "function"
Word "compose"
Less "<"
Word "A"
Comma ","
Word "B"
Comma ","
Word "C"
Greater ">"
LParen "("
Word "f"
Colon ":"
LParen "("
Word "A"
RParen ")"
Arrow "->"
Word "B"
Comma ","
Word "g"
Colon ":"
LParen "("
Word "B"
RParen ")"
Arrow "->"
Word "C"
RParen ")"
Arrow "->"
LParen "("
Word "A"
RParen ")"
Arrow "->"
Word "C"
LBrace "{"
LParen "("
Word "a"
Colon ":"
Word "A"
RParen ")"
Arrow "->"
Word "C"
LBrace "{"
Word "g"
LParen "("
Word "f"
LParen "("
Word "a"
RParen ")"
RParen ")"
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Pure"
Word "composition"
Function "function"
Word "test_compose_pure"
LParen "("
RParen ")"
Arrow "->"
LParen "("
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "compose"
LParen "("
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "x"
Star "*"
IntegerLiteral "2"
RBrace "}"
Comma ","
LParen "("
Word "y"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Quote "\""
Word "result"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "First"
Function "function"
Throws "throws"
Function "function"
Word "test_compose_first_throws"
LParen "("
RParen ")"
Arrow "->"
LParen "("
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "compose"
LParen "("
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "f"
Word "failed"
Quote "\""
RBrace "}"
Comma ","
LParen "("
Word "y"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Quote "\""
Word "result"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Second"
Function "function"
Throws "throws"
Function "function"
Word "test_compose_second_throws"
LParen "("
RParen ")"
Arrow "->"
LParen "("
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "compose"
LParen "("
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "x"
Star "*"
IntegerLiteral "2"
RBrace "}"
Comma ","
LParen "("
Word "y"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Throw "throw"
Quote "\""
Word "g"
Word "failed"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Both"
Word "functions"
Throw "throw"
Word "different"
Word "types"
Function "function"
Word "test_compose_both_throw"
LParen "("
RParen ")"
Arrow "->"
LParen "("
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "compose"
LParen "("
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "string"
Word "error"
Quote "\""
RBrace "}"
Comma ","
LParen "("
Word "y"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Throw "throw"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
