baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__enum_class_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Enum"
Comma ","
Class "class"
Comma ","
Word "and"
Word "union"
Throws "throws"
Word "coverage"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
MinusMinus "--"
Minus "-"
Word "Enum"
Word "definitions"
MinusMinus "--"
Minus "-"
Enum "enum"
Word "ErrorKind"
LBrace "{"
Word "NotFound"
Word "Unauthorized"
Word "ValidationFailed"
Word "RateLimited"
RBrace "}"
Slash "/"
Slash "/"
MinusMinus "--"
Minus "-"
Word "Class"
Word "definitions"
MinusMinus "--"
Minus "-"
Class "class"
Word "ApiError"
LBrace "{"
Word "code"
Colon ":"
Word "int"
Word "message"
Colon ":"
Word "string"
RBrace "}"
Class "class"
Word "ValidationError"
LBrace "{"
Word "field"
Colon ":"
Word "string"
Word "reason"
Colon ":"
Word "string"
RBrace "}"
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Throwing"
Word "enums"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Throw"
Word "a"
Word "specific"
Enum "enum"
Word "variant"
Function "function"
Word "throw_enum_variant"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "ErrorKind"
LBrace "{"
If "if"
LParen "("
Word "x"
EqualsEquals "=="
IntegerLiteral "0"
RParen ")"
LBrace "{"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "NotFound"
RBrace "}"
If "if"
LParen "("
Word "x"
EqualsEquals "=="
IntegerLiteral "1"
RParen ")"
LBrace "{"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "Unauthorized"
RBrace "}"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
Slash "/"
Slash "/"
Word "Lambda"
Word "that"
Throws "throws"
Word "an"
Enum "enum"
Word "variant"
Function "function"
Word "test_lambda_throws_enum"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "ValidationFailed"
RBrace "}"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Throwing"
Word "classes"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Throw"
Word "a"
Class "class"
Word "instance"
Function "function"
Word "throw_class_instance"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "ApiError"
LBrace "{"
If "if"
LParen "("
Word "x"
Less "<"
IntegerLiteral "0"
RParen ")"
LBrace "{"
Throw "throw"
Word "ApiError"
LBrace "{"
Word "code"
Colon ":"
IntegerLiteral "500"
Comma ","
Word "message"
Colon ":"
Quote "\""
Word "internal"
Word "error"
Quote "\""
RBrace "}"
RBrace "}"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
Slash "/"
Slash "/"
Word "Lambda"
Word "that"
Throws "throws"
Word "a"
Class "class"
Function "function"
Word "test_lambda_throws_class"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Word "ValidationError"
LBrace "{"
Word "field"
Colon ":"
Quote "\""
Word "email"
Quote "\""
Comma ","
Word "reason"
Colon ":"
Quote "\""
Word "invalid"
Word "format"
Quote "\""
RBrace "}"
RBrace "}"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Union"
Throws "throws"
Word "types"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Union"
Word "of"
Enum "enum"
Word "variants"
LParen "("
Word "single"
Enum "enum"
Word "type"
Word "covers"
Word "all"
RParen ")"
Function "function"
Word "throw_various_errors"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "ErrorKind"
LBrace "{"
Match "match"
LParen "("
Word "x"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "NotFound"
Comma ","
IntegerLiteral "1"
FatArrow "=>"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "Unauthorized"
Comma ","
IntegerLiteral "2"
FatArrow "=>"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "ValidationFailed"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Union"
Word "of"
Word "different"
Word "classes"
Function "function"
Word "throw_mixed_classes"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "ApiError"
Pipe "|"
Word "ValidationError"
LBrace "{"
If "if"
LParen "("
Word "x"
EqualsEquals "=="
IntegerLiteral "0"
RParen ")"
LBrace "{"
Throw "throw"
Word "ApiError"
LBrace "{"
Word "code"
Colon ":"
IntegerLiteral "404"
Comma ","
Word "message"
Colon ":"
Quote "\""
Word "not"
Word "found"
Quote "\""
RBrace "}"
RBrace "}"
If "if"
LParen "("
Word "x"
EqualsEquals "=="
IntegerLiteral "1"
RParen ")"
LBrace "{"
Throw "throw"
Word "ValidationError"
LBrace "{"
Word "field"
Colon ":"
Quote "\""
Word "id"
Quote "\""
Comma ","
Word "reason"
Colon ":"
Quote "\""
Word "required"
Quote "\""
RBrace "}"
RBrace "}"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
Slash "/"
Slash "/"
Word "Union"
Word "of"
Enum "enum"
Word "and"
Class "class"
Function "function"
Word "throw_enum_or_class"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "ErrorKind"
Pipe "|"
Word "ApiError"
LBrace "{"
If "if"
LParen "("
Word "x"
EqualsEquals "=="
IntegerLiteral "0"
RParen ")"
LBrace "{"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "RateLimited"
RBrace "}"
If "if"
LParen "("
Word "x"
EqualsEquals "=="
IntegerLiteral "1"
RParen ")"
LBrace "{"
Throw "throw"
Word "ApiError"
LBrace "{"
Word "code"
Colon ":"
IntegerLiteral "503"
Comma ","
Word "message"
Colon ":"
Quote "\""
Word "unavailable"
Quote "\""
RBrace "}"
RBrace "}"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
Slash "/"
Slash "/"
Word "Union"
Word "of"
Word "primitive"
Comma ","
Enum "enum"
Comma ","
Word "and"
Class "class"
Function "function"
Word "throw_any_error"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "string"
Pipe "|"
Word "ErrorKind"
Pipe "|"
Word "ApiError"
LBrace "{"
Match "match"
LParen "("
Word "x"
RParen ")"
LBrace "{"
IntegerLiteral "0"
FatArrow "=>"
Throw "throw"
Quote "\""
Word "simple"
Word "string"
Word "error"
Quote "\""
Comma ","
IntegerLiteral "1"
FatArrow "=>"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "NotFound"
Comma ","
IntegerLiteral "2"
FatArrow "=>"
Throw "throw"
Word "ApiError"
LBrace "{"
Word "code"
Colon ":"
IntegerLiteral "400"
Comma ","
Word "message"
Colon ":"
Quote "\""
Word "bad"
Word "request"
Quote "\""
RBrace "}"
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "HOF"
Word "with"
Enum "enum"
Slash "/"
Class "class"
Throws "throws"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "HOF"
Word "with"
Word "callback"
Word "that"
Throws "throws"
Enum "enum"
Function "function"
Word "apply_may_throw_enum"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "ErrorKind"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_apply_enum_thrower"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_may_throw_enum"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "Unauthorized"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "HOF"
Word "with"
Word "callback"
Word "that"
Throws "throws"
Class "class"
Function "function"
Word "apply_may_throw_class"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "ApiError"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_apply_class_thrower"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_may_throw_class"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Word "ApiError"
LBrace "{"
Word "code"
Colon ":"
IntegerLiteral "401"
Comma ","
Word "message"
Colon ":"
Quote "\""
Word "unauthorized"
Quote "\""
RBrace "}"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "HOF"
Word "with"
Word "implicit"
Word "rethrows"
Minus "-"
Enum "enum"
Word "callback"
Function "function"
Word "apply_generic_enum"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_rethrows_enum"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_generic_enum"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "NotFound"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "HOF"
Word "with"
Word "implicit"
Word "rethrows"
Minus "-"
Class "class"
Word "callback"
Function "function"
Word "apply_generic_class"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_rethrows_class"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_generic_class"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Word "ValidationError"
LBrace "{"
Word "field"
Colon ":"
Quote "\""
Word "name"
Quote "\""
Comma ","
Word "reason"
Colon ":"
Quote "\""
Word "too"
Word "short"
Quote "\""
RBrace "}"
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Catch"
Word "patterns"
Word "with"
Word "enums"
Slash "/"
Word "classes"
EqualsEquals "=="
Equals "="
Function "function"
Word "catch_enum_variants"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "throw_enum_variant"
LParen "("
Word "x"
RParen ")"
Catch "catch"
LParen "("
Word "e"
RParen ")"
LBrace "{"
Word "ErrorKind"
Dot "."
Word "NotFound"
FatArrow "=>"
Quote "\""
Word "not"
Word "found"
Quote "\""
Comma ","
Word "ErrorKind"
Dot "."
Word "Unauthorized"
FatArrow "=>"
Quote "\""
Word "unauthorized"
Quote "\""
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "other"
Word "error"
Quote "\""
RBrace "}"
RBrace "}"
Function "function"
Word "catch_class_error"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "throw_class_instance"
LParen "("
Word "x"
RParen ")"
Catch "catch"
LParen "("
Word "e"
RParen ")"
LBrace "{"
Word "_"
Colon ":"
Word "ApiError"
FatArrow "=>"
Quote "\""
Word "api"
Word "error"
Colon ":"
Quote "\""
Plus "+"
Word "e"
Dot "."
Word "message"
RBrace "}"
RBrace "}"
Function "function"
Word "catch_mixed_errors"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "throw_enum_or_class"
LParen "("
Word "x"
RParen ")"
Catch "catch"
LParen "("
Word "e"
RParen ")"
LBrace "{"
Word "ErrorKind"
Dot "."
Word "RateLimited"
FatArrow "=>"
Quote "\""
Word "rate"
Word "limited"
Quote "\""
Comma ","
Word "_"
Colon ":"
Word "ApiError"
FatArrow "=>"
Quote "\""
Word "api"
Word "error"
Quote "\""
Comma ","
Word "_"
FatArrow "=>"
Quote "\""
Word "unknown"
Quote "\""
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Stored"
Word "callbacks"
Word "with"
Enum "enum"
Slash "/"
Class "class"
Throws "throws"
EqualsEquals "=="
Equals "="
Class "class"
Word "EnumThrowingHandler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
Throws "throws"
Word "ErrorKind"
RBrace "}"
Class "class"
Word "ClassThrowingHandler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
Throws "throws"
Word "ApiError"
RBrace "}"
Class "class"
Word "MixedThrowingHandler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
Throws "throws"
Word "ErrorKind"
Pipe "|"
Word "ApiError"
RBrace "}"
Function "function"
Word "make_enum_handler"
LParen "("
RParen ")"
Arrow "->"
Word "EnumThrowingHandler"
LBrace "{"
Word "EnumThrowingHandler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "NotFound"
RBrace "}"
RBrace "}"
RBrace "}"
Function "function"
Word "make_class_handler"
LParen "("
RParen ")"
Arrow "->"
Word "ClassThrowingHandler"
LBrace "{"
Word "ClassThrowingHandler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Throw "throw"
Word "ApiError"
LBrace "{"
Word "code"
Colon ":"
IntegerLiteral "500"
Comma ","
Word "message"
Colon ":"
Quote "\""
Word "fail"
Quote "\""
RBrace "}"
RBrace "}"
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Type"
Word "aliases"
Word "with"
Enum "enum"
Slash "/"
Class "class"
Throws "throws"
EqualsEquals "=="
Equals "="
Word "type"
Word "EnumThrower"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "ErrorKind"
Word "type"
Word "ClassThrower"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "ApiError"
Word "type"
Word "MixedThrower"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "ErrorKind"
Pipe "|"
Word "ApiError"
Pipe "|"
Word "string"
Function "function"
Word "use_enum_thrower"
LParen "("
Word "f"
Colon ":"
Word "EnumThrower"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "use_class_thrower"
LParen "("
Word "f"
Colon ":"
Word "ClassThrower"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "use_mixed_thrower"
LParen "("
Word "f"
Colon ":"
Word "MixedThrower"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_type_alias_enum"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "use_enum_thrower"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Word "ErrorKind"
Dot "."
Word "ValidationFailed"
RBrace "}"
RParen ")"
RBrace "}"
Function "function"
Word "test_type_alias_class"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "use_class_thrower"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Word "ApiError"
LBrace "{"
Word "code"
Colon ":"
IntegerLiteral "422"
Comma ","
Word "message"
Colon ":"
Quote "\""
Word "invalid"
Quote "\""
RBrace "}"
RBrace "}"
RParen ")"
RBrace "}"
Function "function"
Word "test_type_alias_mixed"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "use_mixed_thrower"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "string"
Word "error"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
