baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__explicit_param_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Explicit"
Throws "throws"
Word "on"
Word "callback"
Word "param"
Word "should"
Word "NOT"
Word "create"
Word "effect"
Word "var"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "When"
Word "the"
Word "callback"
Word "param"
Word "has"
Word "explicit"
Throws "throws"
Comma ","
Word "no"
Word "__throws_"
Word "var"
Word "should"
Word "appear"
Function "function"
Word "apply_explicit"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_explicit_param_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_explicit"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
Function "function"
Word "test_explicit_param_throwing"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_explicit"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Throw "throw"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Explicit"
Throws "throws"
Word "never"
Word "on"
Word "param"
Minus "-"
Word "pure"
Word "callbacks"
Word "only"
Function "function"
Word "apply_pure_only"
LParen "("
Word "f"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_pure_only_pure"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "apply_pure_only"
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
