baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__fn_decl_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Function"
Word "declaration"
Throws "throws"
Word "preserved"
In "in"
Word "type"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Function"
Word "with"
Word "explicit"
Throws "throws"
Minus "-"
Word "should"
Word "show"
Throws "throws"
Word "string"
In "in"
Word "type"
Function "function"
Word "declared_may_fail"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "string"
LBrace "{"
If "if"
LParen "("
Word "x"
EqualsEquals "=="
IntegerLiteral "0"
RParen ")"
LBrace "{"
Throw "throw"
Quote "\""
Word "zero"
Quote "\""
RBrace "}"
Quote "\""
Word "ok"
Quote "\""
RBrace "}"
Slash "/"
Slash "/"
Word "Function"
Word "with"
Word "no"
Throws "throws"
Minus "-"
Word "should"
Word "show"
Throws "throws"
Word "never"
Function "function"
Word "always_ok"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Quote "\""
Word "always"
Word "ok"
Quote "\""
RBrace "}"
Slash "/"
Slash "/"
Word "Function"
Word "calling"
Word "a"
Word "throwing"
Function "function"
Minus "-"
Word "should"
Word "propagate"
Throws "throws"
Function "function"
Word "caller"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "declared_may_fail"
LParen "("
IntegerLiteral "1"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Function"
Word "calling"
Word "a"
Word "throwing"
Function "function"
Word "with"
Catch "catch"
Minus "-"
Word "should"
Word "not"
Word "propagate"
Function "function"
Word "safe_caller"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "declared_may_fail"
LParen "("
IntegerLiteral "1"
RParen ")"
Catch "catch"
LParen "("
Word "e"
RParen ")"
LBrace "{"
Word "_"
FatArrow "=>"
Quote "\""
Word "caught"
Quote "\""
RBrace "}"
RBrace "}"
