baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__fn_type_alias_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Function"
Word "type"
Word "aliases"
Word "with"
Throws "throws"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "Type"
Word "alias"
Word "with"
Word "explicit"
Throws "throws"
Word "type"
Word "ThrowingCallback"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
Slash "/"
Slash "/"
Word "Type"
Word "alias"
Word "without"
Throws "throws"
Minus "-"
Word "defaults"
Word "to"
Throws "throws"
Word "never"
Word "type"
Word "PureCallback"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Slash "/"
Slash "/"
Word "Type"
Word "alias"
Word "with"
Throws "throws"
Word "never"
Word "explicitly"
Word "type"
Word "ExplicitPure"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
Slash "/"
Slash "/"
Word "Throws"
Word "alias"
Word "resolving"
Word "to"
Word "never"
Word "should"
Word "still"
Word "lower"
Word "to"
Word "a"
Word "closed"
Function "function"
Word "type"
Word "type"
Word "NoThrow"
Equals "="
Word "never"
Word "type"
Word "AliasPure"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "NoThrow"
Slash "/"
Slash "/"
Word "Parameterized"
Function "function"
Word "type"
Word "with"
Throws "throws"
Word "type"
Word "Mapper"
Equals "="
LParen "("
Word "int"
RParen ")"
Arrow "->"
Word "string"
Throws "throws"
Word "string"
Slash "/"
Slash "/"
Word "Nested"
Function "function"
Word "type"
Minus "-"
Word "outer"
Throws "throws"
Comma ","
Word "inner"
Word "pure"
Word "type"
Word "Wrapper"
Equals "="
LParen "("
LParen "("
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "string"
Function "function"
Word "use_alias_pure"
LParen "("
Word "f"
Colon ":"
Word "AliasPure"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
RParen ")"
RBrace "}"
