baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__generic_function_inference.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Generic"
Function "function"
Word "inference"
Word "over"
Word "nominal"
Word "wrappers"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "T"
Word "should"
Word "be"
Word "inferred"
Word "from"
Word "the"
Word "nominal"
Word "wrapper"
Error "'"
Word "s"
Word "type_args"
Dot "."
Class "class"
Word "Wrapper"
Less "<"
Word "T"
Greater ">"
LBrace "{"
Word "inner"
Colon ":"
Word "T"
RBrace "}"
Function "function"
Word "unwrap"
Less "<"
Word "T"
Greater ">"
LParen "("
Word "w"
Colon ":"
Word "Wrapper"
Less "<"
Word "T"
Greater ">"
RParen ")"
Arrow "->"
Word "T"
LBrace "{"
Word "w"
Dot "."
Word "inner"
RBrace "}"
Function "function"
Word "test_unwrap_int"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "unwrap"
LParen "("
Word "Wrapper"
Less "<"
Word "int"
Greater ">"
LBrace "{"
Word "inner"
Colon ":"
IntegerLiteral "42"
RBrace "}"
RParen ")"
RBrace "}"
Function "function"
Word "test_unwrap_string"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Word "unwrap"
LParen "("
Word "Wrapper"
Less "<"
Word "string"
Greater ">"
LBrace "{"
Word "inner"
Colon ":"
Quote "\""
Word "hello"
Quote "\""
RBrace "}"
RParen ")"
RBrace "}"
