baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__01_lexer__generic_stored_callback.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
EqualsEquals "=="
Equals "="
Word "Generic"
Word "stored"
Word "callback"
Word "field"
EqualsEquals "=="
Equals "="
Slash "/"
Slash "/"
Word "The"
Word "generic"
Word "parameter"
Word "E"
Word "should"
Word "flow"
Word "through"
Word "to"
Word "the"
Word "stored"
Word "callback"
Error "'"
Word "s"
Throws "throws"
Dot "."
Class "class"
Word "Handler"
Less "<"
Word "E"
Greater ">"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
Throws "throws"
Word "E"
RBrace "}"
Function "function"
Word "use_string_handler"
LParen "("
Word "h"
Colon ":"
Word "Handler"
Less "<"
Word "string"
Greater ">"
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "h"
Dot "."
Word "run"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "use_int_handler"
LParen "("
Word "h"
Colon ":"
Word "Handler"
Less "<"
Word "int"
Greater ">"
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "h"
Dot "."
Word "run"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "use_string_handler_alias"
LParen "("
Word "h"
Colon ":"
Word "Handler"
Less "<"
Word "string"
Greater ">"
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Let "let"
Word "alias"
Equals "="
Word "h"
Word "alias"
Dot "."
Word "run"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "use_local_string_handler"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Let "let"
Word "h"
Equals "="
Word "make_string_handler"
LParen "("
RParen ")"
Word "h"
Dot "."
Word "run"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "maybe_use_string_handler"
LParen "("
Word "h"
Colon ":"
Word "Handler"
Less "<"
Word "string"
Greater ">"
Question "?"
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "h"
QuestionDot "?."
Word "run"
LParen "("
RParen ")"
Word "null"
RBrace "}"
Function "function"
Word "make_string_handler"
LParen "("
RParen ")"
Arrow "->"
Word "Handler"
Less "<"
Word "string"
Greater ">"
LBrace "{"
Word "Handler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Throw "throw"
Quote "\""
Word "error"
Quote "\""
RBrace "}"
RBrace "}"
RBrace "}"
Function "function"
Word "make_int_handler"
LParen "("
RParen ")"
Arrow "->"
Word "Handler"
Less "<"
Word "int"
Greater ">"
LBrace "{"
Word "Handler"
LBrace "{"
Word "run"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Throw "throw"
IntegerLiteral "42"
RBrace "}"
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Calling"
Word "use_string_handler"
Word "should"
Word "have"
Colon ":"
Throws "throws"
Word "string"
Function "function"
Word "test_string_handler"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "use_string_handler"
LParen "("
Word "make_string_handler"
LParen "("
RParen ")"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Calling"
Word "use_int_handler"
Word "should"
Word "have"
Colon ":"
Throws "throws"
Word "int"
Function "function"
Word "test_int_handler"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "use_int_handler"
LParen "("
Word "make_int_handler"
LParen "("
RParen ")"
RParen ")"
RBrace "}"
Function "function"
Word "test_string_handler_alias"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "use_string_handler_alias"
LParen "("
Word "make_string_handler"
LParen "("
RParen ")"
RParen ")"
RBrace "}"
Function "function"
Word "test_local_string_handler"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "use_local_string_handler"
LParen "("
RParen ")"
RBrace "}"
Function "function"
Word "test_optional_string_handler"
LParen "("
RParen ")"
Arrow "->"
Word "null"
LBrace "{"
Word "maybe_use_string_handler"
LParen "("
Word "make_string_handler"
LParen "("
RParen ")"
RParen ")"
RBrace "}"
